# dz_dlya_Miti

./: .gitignore  pyproject.toml
taks_9/: main.py
task_6/: 6_coverage.txt  6_reference_seq.fasta  main.py
task_8/: battle.py  heroes.py  main.py
